syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "proto-gen/userpb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message User {
  string uuid = 1;
  string name = 2;
  string username = 3;
  string password = 4;
  bool is_verified = 5;
  google.protobuf.Timestamp created_at = 6;
}

message GetUserRequest {
  string uuid = 1;
}

message GetUserResponse {
 User user = 1;
}

message CreateUserRequest {
  string name = 1;
  string username = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
}